# EU4ToVic3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EU4ToVic3-Installer.iss  EU4ToVic3.sln  LICENSE  README.md  appveyor.yml  appveyor.yml.bak  build_linux.sh  build_linux_foreign.sh
EU4toV3/: CMakeLists.txt  Copy_Files.bat  Copy_Files.sh  Copy_Files_Debug.bat  EU4ToV3.vcxproj  EU4ToV3.vcxproj.filters  EU4toV3.vcxproj  EU4toV3.vcxproj.filters  NamingConvention.txt
EU4toV3/Data_Files/: FAQ.txt  GeneralFAQ-READ.ME.FIRST.txt  ReadMe.txt  configuration-example.txt  configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  fronter-configuration.txt  fronter-options.txt  license.txt  options_l_english.yml  options_l_french.yml  options_l_german.yml  options_l_italian.yml  options_l_latin.yml  options_l_russian.yml
EU4toV3/Data_Files/configurables/: ChangeLog.txt  africa_reset.txt  agreement_types.txt  blocked_tech_schools.txt  colonial_cultures.txt  colonial_flags.txt  colonial_regions.txt  colonial_tags.txt  country_mappings.txt  culture_definitions.txt  culture_map.txt  culture_map_slaves.txt  culture_trait_map.txt  culture_traits.txt  custom_flag_patterns.txt  dead_definitions.txt  diplomatic_map.txt  econ_defines.txt  flag_block.txt  flag_mappings.txt  government_mapping.txt  idea_effects.txt  interest_groups_map.txt  law_map.txt  leader_traits.txt  minority_pops.txt  name_list_map.txt  name_lists.txt  national_budget.txt  nationals.txt  port_provinces.txt  province_adjacencies.txt  province_mappings.txt  reform_effects.txt  religion_definitions.txt  religion_group_map.txt  religion_map.txt  religious_family_map.txt  religious_icon_map.txt  rgo_randomization.txt  (+16 more)
EU4toV3/Data_Files/configurables/economy/: buildings_map.txt  econ_defines.txt  national_budget.txt  production_method_rules.txt  terrain_econ_modifiers.txt
EU4toV3/Data_Files/configurables/unused/: accepted_culture_thresholds.txt  agreement_types.txt  censorship_mask.txt  chinese_renamings.txt  defense_war_goal_map.txt  government_mapping.txt  idea_effects.txt  leader_traits.txt  minority_pops.txt  party_names.txt  regiment_costs.txt  starting_factories.txt  terrain_data.txt  unions.txt
EU4toV3/Data_Files/flags/: ABI_communist.tga  ABI_fascist.tga  ABI_monarchy.tga  ABI_republic.tga  ABO.tga  ABO_communist.tga  ACA_communist.tga  ACA_fascist.tga  ACA_monarchy.tga  ACO_communist.tga  ACO_monarchy.tga  ACO_republic.tga  ADO_fascist.tga  ADO_monarchy.tga  ADO_republic.tga  AGG_communist.tga  AGG_monarchy.tga  AGG_republic.tga  ALD_republic.tga  ALI_fascist.tga  ALM.tga  ALM_republic.tga  ALN.tga  ALQ_communist.tga  ALQ_fascist.tga  ALQ_monarchy.tga  ALQ_republic.tga  ANA_communist.tga  ANA_fascist.tga  ANA_monarchy.tga  ANA_republic.tga  ANG_communist.tga  ANG_monarchy.tga  ANL.tga  ANL_fascist.tga  ANL_monarchy.tga  ANL_republic.tga  AOM.tga  AOM_communist.tga  AOM_fascist.tga  (+6970 more)
EU4toV3/Resources/images/: thumbnail.psd
EU4toV3/Resources/workshop/: workshop_description.txt
EU4toV3/Resources/workshop/mod/: EU4toVic3.mod
EU4toV3/Source/: Configuration.cpp  Configuration.h  EU4ToVic3Converter.h  EU4toV3Converter.cpp  EU4toVic3Converter.cpp  main.cpp
EU4toV3/Source/Configuration/: Configuration.cpp  Configuration.h  DatingData.h
EU4toV3/Source/EU4World/: World.cpp  World.h
EU4toV3/Source/EU4World/Army/: EU4Army.cpp  EU4Army.h  EU4Regiment.cpp  EU4Regiment.h
EU4toV3/Source/EU4World/BuildingCostLoader/: BuildingCost.cpp  BuildingCost.h  BuildingCostLoader.h
EU4toV3/Source/EU4World/ColonialRegions/: ColonialRegion.cpp  ColonialRegion.h  ColonialRegions.cpp  ColonialRegions.h
EU4toV3/Source/EU4World/Country/: Countries.cpp  Countries.h  EU4ActiveIdeas.cpp  EU4ActiveIdeas.h  EU4ActivePolicy.cpp  EU4ActivePolicy.h  EU4Country.cpp  EU4Country.h  EU4CountryFlags.h  EU4CountryModifier.cpp  EU4CountryModifier.h  EU4CustomColors.cpp  EU4CustomColors.h  EU4GovernmentSection.cpp  EU4GovernmentSection.h  EU4NationalSymbol.cpp  EU4NationalSymbol.h  EU4ReformStackSection.cpp  EU4ReformStackSection.h  EU4Technology.cpp  EU4Technology.h
EU4toV3/Source/EU4World/CountryManager/: EU4ActiveIdeas.cpp  EU4ActiveIdeas.h  EU4ActivePolicy.h  EU4Country.cpp  EU4Country.h  EU4CountryFlags.cpp  EU4CountryFlags.h  EU4CountryManager.cpp  EU4CountryManager.h  EU4CountryModifier.cpp  EU4CountryModifier.h  EU4CountryRival.cpp  EU4CountryRival.h  EU4Technology.h
EU4toV3/Source/EU4World/CultureLoader/: CultureGroupParser.cpp  CultureGroupParser.h  CultureLoader.cpp  CultureLoader.h  CultureParser.cpp  CultureParser.h
EU4toV3/Source/EU4World/Diplomacy/: EU4Agreement.cpp  EU4Agreement.h  EU4Diplomacy.cpp  EU4Diplomacy.h
EU4toV3/Source/EU4World/DiplomacyParser/: DiplomacyParser.cpp  DiplomacyParser.h  EU4Agreement.cpp
EU4toV3/Source/EU4World/EmpireParser/: EmpireParser.cpp  EmpireParser.h
EU4toV3/Source/EU4World/History/: CountryHistory.cpp  CountryHistory.h  CountryHistoryDate.cpp  CountryHistoryDate.h
EU4toV3/Source/EU4World/Leader/: EU4Leader.cpp  EU4Leader.h  EU4LeaderID.cpp  EU4LeaderID.h
EU4toV3/Source/EU4World/Localization/: EU4Localization.cpp  EU4Localization.h
EU4toV3/Source/EU4World/Mods/: Mod.cpp  Mod.h  ModLoader.cpp  ModLoader.h  ModParser.cpp  ModParser.h  Mods.cpp  Mods.h
EU4toV3/Source/EU4World/NationMerger/: MergeBlock.cpp  MergeBlock.h  NationMergeParser.cpp  NationMergeParser.h
EU4toV3/Source/EU4World/ProvinceManager/: DateChange.h  DateItems.h  DefaultMapParser.cpp  DefaultMapParser.h  DefinitionScraper.cpp  DefinitionScraper.h  EU4Province.cpp  EU4Province.h  PopRatio.cpp  PopRatio.h  ProvinceBuildings.cpp  ProvinceBuildings.h  ProvinceHistory.cpp  ProvinceHistory.h  ProvinceManager.cpp  ProvinceManager.h
EU4toV3/Source/EU4World/Provinces/: DateItems.cpp  DateItems.h  EU4Province.cpp  EU4Province.h  PopRatio.cpp  PopRatio.h  (+4 more)
EU4toV3/Source/Helpers/: TechValues.cpp  TechValues.h
EU4toV3/Source/Output/: outWorld.cpp  outWorld.h
EU4toV3/Source/V3World/: V3World.cpp  V3World.h
(+4717 files in other folders)
