cmake_minimum_required(VERSION 3.5)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(EU4ToVic3)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")

add_compile_options("-lstdc++fs")
add_compile_options("-O2")
add_compile_options("-pthread")
add_link_options(-no-pie)

include_directories("../commonItems")
include_directories("../ZipLib")
include_directories("Source")
include_directories("Source/Mappers")
include_directories("Source/EU4World")
include_directories("Source/V3World")
include_directories("Source/Helpers")
include_directories("${PROJECT_SOURCE_DIR}")
link_directories(${CMAKE_SOURCE_DIR}/Resources)

add_subdirectory(../ZipLib [binary_dir])

file(GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB HELPER_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/*.cpp")
file(GLOB HELPER_ELZIP_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/elzip/*.cpp")
file(GLOB HELPER_MINIZIP_SOURCES "${PROJECT_SOURCE_DIR}/Helpers/elzip/minizip/*.c")
file(GLOB Vic3WORLD_SOURCES "${PROJECT_SOURCE_DIR}/V3World/*.cpp")
file(GLOB V3_ARMY_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Army/*.cpp")
file(GLOB V3_OUTPUT_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Output/*.cpp")
file(GLOB V3_LEADER_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Leader/*.cpp")
file(GLOB V3_FACTORY_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Factory/*.cpp")
file(GLOB V3_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Country/*.cpp")
file(GLOB V3_PARTY_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Party/*.cpp")
file(GLOB V3_DECISIONS_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Decisions/*.cpp")
file(GLOB V3_DIPLOMACY_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Diplomacy/*.cpp")
file(GLOB V3_LOCALISATION_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Localisation/*.cpp")
file(GLOB V3_REFORMS_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Reforms/*.cpp")
file(GLOB V3_POP_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Pop/*.cpp")
file(GLOB V3_PROVINCE_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Province/*.cpp")
file(GLOB V3_STATE_SOURCES "${PROJECT_SOURCE_DIR}/V3World/State/*.cpp")
file(GLOB V3_FLAGS_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Flags/*.cpp")
file(GLOB V3_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/V3World/Country/*.cpp")
file(GLOB V3_MAPPINGCHECKER_SOURCES "${PROJECT_SOURCE_DIR}/V3World/MappingChecker/*.cpp")
file(GLOB V3_WAR_SOURCES "${PROJECT_SOURCE_DIR}/V3World/War/*.cpp")
file(GLOB MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/*.cpp")
file(GLOB MAPPER_AFRICARESET_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/AfricaReset/*.cpp")
set(MAPPER_ACCEPTED_CULTURE_THRESHOLDS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/AcceptedCultureThresholds/AcceptedCultureThresholdsMapper.cpp")
file(GLOB MAPPER_IDEAEFFECTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/IdeaEffects/*.cpp")
file(GLOB MAPPER_TECHGROUPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/TechGroups/*.cpp")
file(GLOB MAPPER_FACTORYTECHS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryTechs/*.cpp")
file(GLOB MAPPER_FACTORYINVENTIONS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryInventions/*.cpp")
file(GLOB MAPPER_FACTORYTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryTypes/*.cpp")
file(GLOB MAPPER_FACTORYCOUNTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FactoryCounts/*.cpp")
file(GLOB MAPPER_PROVINCE_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ProvinceMappings/*.cpp")
file(GLOB MAPPER_BUILDINGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Buildings/*.cpp")
file(GLOB MAPPER_CULTUREGROUPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CultureGroups/*.cpp")
file(GLOB MAPPER_RELIGIOUSGROUPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ReligiousGroups/*.cpp")
file(GLOB MAPPER_TITLES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Titles/*.cpp")
file(GLOB MAPPER_COUNTRYMAPPINGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CountryMappings/*.cpp")
file(GLOB MAPPER_GEOGRAPHY_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Geography/*.cpp")
file(GLOB MAPPER_COLONIALTAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ColonialTags/*.cpp")
file(GLOB MAPPER_COLONIALFLAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ColonialFlags/*.cpp")
file(GLOB MAPPER_COUNTRYFLAGS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CountryFlags/*.cpp")
file(GLOB MAPPER_CULTUREMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CultureMapper/*.cpp")
file(GLOB MAPPER_FLAGCOLORS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/FlagColors/*.cpp")
file(GLOB MAPPER_GOVERNMENTMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/GovernmentMapper/*.cpp")
file(GLOB MAPPER_MINORITYPOPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/MinorityPops/*.cpp")
file(GLOB MAPPER_PARTYNAMES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PartyNames/*.cpp")
file(GLOB MAPPER_PARTYTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PartyTypes/*.cpp")
file(GLOB MAPPER_REGIMENTCOSTS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RegimentCosts/*.cpp")
file(GLOB MAPPER_RELIGIONMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ReligionMapper/*.cpp")
file(GLOB MAPPER_UNITTYPES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/UnitTypes/*.cpp")
file(GLOB MAPPER_STATEMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StateMapper/*.cpp")
file(GLOB MAPPER_BLOCKEDTECHSCHOOLS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/BlockedTechSchools/*.cpp")
file(GLOB MAPPER_TECHSCHOOLS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/TechSchools/*.cpp")
file(GLOB MAPPER_CULTURALUNIONS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/CulturalUnions/*.cpp")
file(GLOB MAPPER_POPS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Pops/*.cpp")
file(GLOB MAPPER_UNRELEASABLES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/Unreleasables/*.cpp")
file(GLOB MAPPER_LEADERTRAITS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/LeaderTraits/*.cpp")
file(GLOB MAPPER_NAVALBASES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/NavalBases/*.cpp")
file(GLOB MAPPER_RGORANDOMIZATION_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RGORandomization/*.cpp")
file(GLOB MAPPER_V3PROVINCEREGIONSMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/V3ProvinceRegionsMapper/*.cpp")
file(GLOB MAPPER_PORTPROVINCES_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/PortProvinces/*.cpp")
file(GLOB MAPPER_PROVINCEDETAILS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/ProvinceDetails/*.cpp")
file(GLOB MAPPER_VERSIONPARSER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/VersionParser/*.cpp")
file(GLOB MAPPER_AGREEMENTMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/AgreementMapper/*.cpp")
file(GLOB MAPPER_WARGOALMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/WarGoalMapper/*.cpp")
file(GLOB MAPPER_STARTINGTECH_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StartingTechMapper/*.cpp")
file(GLOB MAPPER_STARTINGINVENTION_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/StartingInventionMapper/*.cpp")
file(GLOB MAPPER_SUPERGROUPMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/SuperGroupMapper/*.cpp")
file(GLOB MAPPER_REGIONLOCALIZATIONS_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/RegionLocalizations/*.cpp")
file(GLOB MAPPER_DEADDEFINITIONMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/DeadDefinitionMapper/*.cpp")
file(GLOB MAPPER_UNIONTAGSMAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/UnionTagsMapper/*.cpp")
file(GLOB EU4_WORLD_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/*.cpp")
file(GLOB EU4_COLONIALREGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/ColonialRegions/*.cpp")
file(GLOB EU4_HISTORY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/History/*.cpp")
file(GLOB EU4_LEADER_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Leader/*.cpp")
file(GLOB EU4_RELATIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Relations/*.cpp")
file(GLOB EU4_DIPLOMACY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Diplomacy/*.cpp")
file(GLOB EU4_NATIONMERGER_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/NationMerger/*.cpp")
file(GLOB EU4_MODS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Mods/*.cpp")
file(GLOB EU4_PROVINCES_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Provinces/*.cpp")
file(GLOB EU4_REGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Regions/*.cpp")
file(GLOB EU4_COUNTRY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Country/*.cpp")
file(GLOB EU4_ARMY_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Army/*.cpp")
file(GLOB EU4_RELIGIONS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Religions/*.cpp")
file(GLOB EU4_LOCALIZATION_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Localization/*.cpp")
file(GLOB EU4_WARS_SOURCES "${PROJECT_SOURCE_DIR}/EU4World/Wars/*.cpp")
set(COMMON_SOURCES "../commonItems/CommonFunctions.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Color.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/ConvenientParser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/GameVersion.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/Parser.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/ParserHelpers.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/StringUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/OSCommonLayer.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../commonItems/targa.cpp")

add_executable(EU4ToVic3 
	${MAIN_SOURCES}
	${HELPER_SOURCES}
	${HELPER_ELZIP_SOURCES}
	${HELPER_MINIZIP_SOURCES}
	${Vic3WORLD_SOURCES}
	${V3_ARMY_SOURCES}
	${V3_COUNTRY_SOURCES}
	${V3_LEADER_SOURCES}
	${V3_FACTORY_SOURCES}
	${V3_PARTY_SOURCES}
	${V3_DECISIONS_SOURCES}
	${V3_DIPLOMACY_SOURCES}
	${V3_OUTPUT_SOURCES}
	${V3_LOCALISATION_SOURCES}
	${V3_REFORMS_SOURCES}
	${V3_POP_SOURCES}
	${V3_PROVINCE_SOURCES}
	${V3_STATE_SOURCES}
	${V3_FLAGS_SOURCES}
	${V3_COUNTRY_SOURCES}
	${V3_MAPPINGCHECKER_SOURCES}
	${V3_WAR_SOURCES}
	${MAPPER_SOURCES}
	${MAPPER_AFRICARESET_SOURCES}
	${MAPPER_ACCEPTED_CULTURE_THRESHOLDS_SOURCES}
	${MAPPER_IDEAEFFECTS_SOURCES}
	${MAPPER_TECHGROUPS_SOURCES}
	${MAPPER_FACTORYTECHS_SOURCES}
	${MAPPER_FACTORYINVENTIONS_SOURCES}
	${MAPPER_FACTORYTYPES_SOURCES}
	${MAPPER_FACTORYCOUNTS_SOURCES}
	${MAPPER_PROVINCE_SOURCES}
	${MAPPER_BUILDINGS_SOURCES}
	${MAPPER_CULTUREGROUPS_SOURCES}
	${MAPPER_RELIGIOUSGROUPS_SOURCES}
	${MAPPER_TITLES_SOURCES}
	${MAPPER_COUNTRYMAPPINGS_SOURCES}
	${MAPPER_GEOGRAPHY_SOURCES}
	${MAPPER_COLONIALTAGS_SOURCES}
	${MAPPER_COLONIALFLAGS_SOURCES}
	${MAPPER_COUNTRYFLAGS_SOURCES}
	${MAPPER_CULTUREMAPPER_SOURCES}
	${MAPPER_FLAGCOLORS_SOURCES}
	${MAPPER_GOVERNMENTMAPPER_SOURCES}
	${MAPPER_MINORITYPOPS_SOURCES}
	${MAPPER_PARTYNAMES_SOURCES}
	${MAPPER_PARTYTYPES_SOURCES}
	${MAPPER_REGIMENTCOSTS_SOURCES}
	${MAPPER_RELIGIONMAPPER_SOURCES}
	${MAPPER_UNITTYPES_SOURCES}
	${MAPPER_STATEMAPPER_SOURCES}
	${MAPPER_BLOCKEDTECHSCHOOLS_SOURCES}
	${MAPPER_TECHSCHOOLS_SOURCES}
	${MAPPER_CULTURALUNIONS_SOURCES}
	${MAPPER_POPS_SOURCES}
	${MAPPER_UNRELEASABLES_SOURCES}
	${MAPPER_LEADERTRAITS_SOURCES}
	${MAPPER_NAVALBASES_SOURCES}
	${MAPPER_RGORANDOMIZATION_SOURCES}
	${MAPPER_V3PROVINCEREGIONSMAPPER_SOURCES}
	${MAPPER_PORTPROVINCES_SOURCES}
	${MAPPER_PROVINCEDETAILS_SOURCES}
	${MAPPER_VERSIONPARSER_SOURCES}
	${MAPPER_AGREEMENTMAPPER_SOURCES}
	${MAPPER_WARGOALMAPPER_SOURCES}
	${MAPPER_STARTINGTECH_SOURCES}
	${MAPPER_STARTINGINVENTION_SOURCES}
	${MAPPER_SUPERGROUPMAPPER_SOURCES}
	${MAPPER_REGIONLOCALIZATIONS_SOURCES}
	${MAPPER_DEADDEFINITIONMAPPER_SOURCES}
	${MAPPER_UNIONTAGSMAPPER_SOURCES}
	${EU4_DIPLOMACY_SOURCES}
	${EU4_RELATIONS_SOURCES}
	${EU4_NATIONMERGER_SOURCES}
	${EU4_WORLD_SOURCES}
	${EU4_MODS_SOURCES}
	${EU4_HISTORY_SOURCES}
	${EU4_LEADER_SOURCES}
	${EU4_COLONIALREGIONS_SOURCES}
	${EU4_PROVINCES_SOURCES}
	${EU4_COUNTRY_SOURCES}
	${EU4_ARMY_SOURCES}
	${EU4_REGIONS_SOURCES}
	${EU4_RELIGIONS_SOURCES}
	${EU4_LOCALIZATION_SOURCES}
	${EU4_WARS_SOURCES}
	${COMMON_SOURCES}
)

target_link_libraries(EU4ToVic3 LINK_PUBLIC ZIPLIB stdc++fs rakaly)

add_custom_command(TARGET EU4ToVic3 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND chmod u+x Copy_Files.sh)
add_custom_command(TARGET EU4ToVic3 POST_BUILD WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} COMMAND ./Copy_Files.sh)
